SERVER-4410 -- Windows Service --install option isn't quoting all file parameters

Added quoting code for --pidfilepath, --config, -f, --repairpath and --keyfile.
I think that's all of the current options that can accept filespecs (whether or
not they make sense for a service).